openshift-deployment/20251218_canary_50_50/app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: app1
  labels:
    app: demo-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: app1
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy: "true"
        consul.hashicorp.com/service-meta-version: "v1"
        consul.hashicorp.com/service-tags: "v1"
        k8s.v1.cni.cncf.io/networks: '[{"name":"consul-cni"}]'
    spec:
      serviceAccountName: demo-app
      containers:
        - name: demo-app
          image: muarwi/demo-microservice-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
