openshift-deployment/20251218_canary_50_50/httproute-demo-app-canary.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-demo-app-canary
  namespace: consul
spec:
  parentRefs:
  - name: api-gw-demo-app
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /canary1
    backendRefs:
    - kind: Service
      name: demo-app
      namespace: app1
      port: 5000
      weight: 50
    - kind: Service
      name: demo-app
      namespace: app2
      port: 5000
      weight: 50
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
